# rasterizer

./: CMakeLists.txt  README.md  camera.cpp  camera.h  canvas.cpp  canvas.h  clipping_plane.cpp  clipping_plane.h  colors.h  double3.cpp  double3.h  face_vert.h  main.cpp  matrix_3x3.cpp  matrix_3x3.h  point2.h  renderable.cpp  renderable.h  triangle.h
